# azurefunctionsmcpydantic

./: Readme.md  pyproject.toml
.github/workflows/: main_mcpaifoundryimage.yml
AzureFunctionsMCPPydanticTool/: __init__.py  pydanticutil.py
