[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurefunctionspydanticmcptotoolproperty"
version = "0.1.0"
description = "Convert Pydantic models to Azure Functions MCP toolProperties"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "zecloud", email = "votre@email.com"}
]
dependencies = [
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/zecloud/azurefunctionsmcpydantic"

[tool.setuptools]
packages = ["AzureFunctionsMCPPydanticTool"]